💄 Fixed some clipping text in Posts.

--- a/assets/css/snuggie.css
+++ b/assets/css/snuggie.css
@@ -348,7 +348,7 @@ html {
 	position: relative;
 	background: #fff;
 	width: 24em;
-	height: 500px;
+	height: 550px;
 	border-radius: 0.6em;
 	margin: 1em;
 	overflow: hidden;
@@ -356,6 +356,11 @@ html {
 	box-shadow: 0 13px 27px -5px hsla(240, 30.1%, 28%, 0.25), 0 8px 16px -8px hsla(0, 0%, 0%, 0.3), 0 -6px 16px -6px hsla(0, 0%, 0%, 0.03);
 	transition: all ease 200ms;
   }
+
+
+  .card-small {
+	margin: 0.5em;
+	}
   
   .card:hover {
 	transform: scale(1.03);
